# JFTT-kompilator

./: README.txt  kompilator.py  makefile  pyproject.toml  test-lexer.py  test-parser.py
AST/: program.py
AST/commands/: assign.py  command.py  for_from_downto.py  for_from_to.py  if_then.py  if_then_else.py  read.py  repeat_until.py  while_do.py  write.py
AST/conditions/: cond_eq.py  cond_ge.py  cond_geq.py  cond_le.py  cond_leq.py  cond_neq.py  condition.py
AST/declarations/: array.py  variable.py
AST/expressions/: divide_exp.py  expression.py  minus_exp.py  mod_exp.py  plus_exp.py  times_exp.py
AST/identifiers/: array_number.py  array_pid.py  identifier.py
AST/values/: number.py  value.py  value_identifier.py
compiler/: TODO.txt  asm.py  code.py  codegenerator.py  exceptions.py  lexer.py  memory.py  parser.py  reg_manager.py  register.py
maszyna_wirtualna/: Makefile  maszyna-wirtualna  parser.cc  parser.hh  test.mr
tests/: test_arithmetic.py
testy2020/: 6-mod-mult.imp  arithmetic.imp  my.imp
