[tool.poetry]
name = "python-compiler"
version = "0.1.0"
description = ""
authors = ["Marcin-Szadkowski <marcinsz9045@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sly = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
